--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.example.android.justaid"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,35 +20,35 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/jsoup-1.9.2.jar')
-    compile files('libs/commons-logging-1.0.4.jar')
-    compile files('libs/ezmorph-1.0.3.jar')
-    compile files('libs/json-lib-2.3-jdk13.jar')
-    compile files('libs/commons-httpclient-3.0.1.jar')
-    compile files('libs/commons-lang-2.4.jar')
-    compile files('libs/commons-beanutils-1.7.02.jar')
-    compile files('libs/commons-collections-3.2.jar')
-    compile files('libs/Baidu_Mtj_3.7.5.4.jar')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:gridlayout-v7:25.3.1'
-    compile 'com.diogobernardino:williamchart:2.2'
+    api files('libs/jsoup-1.9.2.jar')
+    api files('libs/commons-logging-1.0.4.jar')
+    api files('libs/ezmorph-1.0.3.jar')
+    api files('libs/json-lib-2.3-jdk13.jar')
+    api files('libs/commons-httpclient-3.0.1.jar')
+    api files('libs/commons-lang-2.4.jar')
+    api files('libs/commons-beanutils-1.7.02.jar')
+    api files('libs/commons-collections-3.2.jar')
+    api files('libs/Baidu_Mtj_3.7.5.4.jar')
+    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'com.android.support.constraint:constraint-layout:1.1.3'
+    api 'com.android.support:cardview-v7:28.0.0'
+    api 'com.android.support:recyclerview-v7:28.0.0'
+    api 'com.android.support:gridlayout-v7:28.0.0'
+    api 'com.diogobernardino:williamchart:2.2'
 
 
-    compile 'com.android.support:design:25.3.1'
+    api 'com.android.support:design:28.0.0'
 
-    compile 'com.google.code.gson:gson:2.3.1'
+    api 'com.google.code.gson:gson:2.8.2'
 
-    compile 'org.litepal.android:core:1.3.2'
+    api 'org.litepal.android:core:1.3.2'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.github.d-max:spots-dialog:0.4@aar'
+    api 'com.github.d-max:spots-dialog:0.4@aar'
 
 }
